# suspycious

./: .dockerignore  .gitignore  404.html  Dockerfile  README.md  client.py  demo.tape  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  server.pub  server.py
.github/workflows/: docs.yml  mkdocs.yml  python-publish.yml
client/: index.html
docs/: client.md  index.md  protocol.md  requirements.txt  server.md  sus.md
js/: shotcuts.js
protos/: action.proto  session.proto  util.proto
protos/alien/: login.proto  lookup.proto  register.proto
protos/api/: channel.proto  generic.proto
protos/events/: channel_events.proto  cliq_events.proto
protos/meta/: channel.proto  cliq.proto  user.proto
search/: search_index.json
server/: index.html
sus/: __init__.py  __main__.py  index.html
sus/client/: __init__.py  client.py  handler.py  protocol.py
sus/common/: exceptions.py  fragmentation.py  globals.py  handler.py  test_fragmentation.py  util.py
sus/server/: __init__.py  handler.py  protocol.py  server.py
wheelhouse/: blake3-0.3.3-cp312-cp312-linux_x86_64.whl  cryptography-41.0.5-cp312-cp312-linux_x86_64.whl
