[tool.poetry]
name = "suspycious"
version = "0.1.3a0"
description = "Python library for the Sus protocol"
authors = ["Romir Kulshrestha <romir.kulshrestha@gmail.com>"]
readme = "README.md"
repository = "https://github.com/romirk/suspycious"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Networking",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed"
]
packages = [{ include = "sus" }]

[tool.poetry.dependencies]
python = ">=3.10"
blake3 = { file = "./wheelhouse/blake3-0.3.3-cp312-cp312-linux_x86_64.whl" }
cryptography = { file = "./wheelhouse/cryptography-41.0.5-cp312-cp312-linux_x86_64.whl" }

[tool.poetry.scripts]
sus = "sus.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/romirk/suspycious/issues"
"Documentation" = "https://romirk.github.io/suspycious/"
